--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -11,14 +11,32 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout code
+      uses: actions/checkout@v4
     
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/setup-buildx-action@v3
+    
+    - name: Verify files
+      run: |
+        echo "Checking required files..."
+        ls -la
+        test -f Dockerfile && echo "✓ Dockerfile exists" || echo "✗ Dockerfile missing"
+        test -f requirements.txt && echo "✓ requirements.txt exists" || echo "✗ requirements.txt missing"
+        test -f main.py && echo "✓ main.py exists" || echo "✗ main.py missing"
+        test -d src && echo "✓ src directory exists" || echo "✗ src directory missing"
     
     - name: Build Docker image
-      run: docker build -t thinkflow:latest .
+      run: |
+        docker build -t thinkflow:latest . || {
+          echo "Docker build failed!"
+          exit 1
+        }
     
     - name: Test Docker image
-      run: docker run --rm thinkflow:latest --help
+      run: |
+        docker run --rm thinkflow:latest --help || {
+          echo "Docker test failed!"
+          exit 1
+        }
 
